--- a/css/styles.css
+++ b/css/styles.css
@@ -611,24 +611,26 @@ transform: translate(-50%, -50%);
 /* region modal form */
 .callback-form {
     
-    
-
 }
+
 .callback-wrapper {
     margin-bottom: 8px;
 }
 .callback-label {
     display: block;
     margin-bottom: 4px;
+    padding-left: 24px;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.16667;
     letter-spacing: 0.04em;
     color: #8e8f99;
 }
-.userName {}
+
 .callback-field {
     position: relative;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 .callback-input {
     display: inline-block;
@@ -646,17 +648,32 @@ transform: translate(-50%, -50%);
     border-color: #4d5ae5; 
 }
 
-.callback-icon {
+.user-icon {
     position: absolute;
     top: 50%;
-    left: 16px;
+    left: 40px;
     transform: translateY(-50%);
     fill: #2e2f42;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.callback-icon:hover,
-.callback-icon:focus {
-    fill: #4d5ae5;
+.user-icon:hover,
+.user-icon:focus {
+    color: #4d5ae5;
 }
+
+.callback-comment {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    resize: none;
+    outline: none;
+  padding: 24px 24px;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+}
+
 /* end region modal form */
